<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lukeaki.se_blackjack.MainActivity">

    <View
        android:id = "@+id/back_color"
        style = "@style/ViewStyle"

        android:background = "@color/darkGreen"
        />

    <TextView
        android:id = "@+id/dealer_card_1"
        style = "@style/CardStyle"

        android:layout_toLeftOf="@id/dealer_card_2"
        android:layout_toStartOf="@id/dealer_card_2" />

    <TextView
        android:id = "@+id/dealer_card_2"
        style = "@style/CardStyle"

        android:layout_toLeftOf="@id/dealer_card_3"
        android:layout_toStartOf="@id/dealer_card_3" />

    <TextView
        android:id = "@+id/dealer_card_3"
        style = "@style/CardStyle"

        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id = "@+id/dealer_card_4"
        style = "@style/CardStyle"

        android:layout_toRightOf="@id/dealer_card_3"
        android:layout_toEndOf="@id/dealer_card_3" />

    <TextView
        android:id = "@+id/dealer_card_5"
        style = "@style/CardStyle"

        android:layout_toRightOf="@id/dealer_card_4"
        android:layout_toEndOf="@id/dealer_card_4" />


    <TextView
        android:id = "@+id/dealer_score"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="10dp"

        android:layout_marginTop = "180dp"
        android:layout_marginLeft = "15dp"
        android:layout_marginBottom = "10dp"

        android:text="@string/total"
        android:textSize="36sp"

        android:layout_marginStart="15dp"
        tools:ignore="RelativeOverlap"
        />

    <TextView
        android:id = "@+id/player_score"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="10dp"

        android:layout_marginTop = "570dp"
        android:layout_marginLeft = "15dp"
        android:layout_marginBottom = "10dp"

        android:text="@string/total"
        android:textSize="36sp"

        android:layout_marginStart="15dp"
        tools:ignore="RelativeOverlap"
        />

    <TextView
        android:id = "@+id/player_card_1"
        style = "@style/PlayerCard"

        android:layout_toLeftOf="@id/player_card_2"
        android:layout_toStartOf="@id/player_card_2"
        android:layout_below="@id/dealer_card_1"
        />

    <TextView
        android:id = "@+id/player_card_2"
        style = "@style/PlayerCard"

        android:layout_toLeftOf="@id/player_card_3"
        android:layout_toStartOf="@id/player_card_3"
        android:layout_below="@id/dealer_card_2"
        />

    <TextView
        android:id = "@+id/player_card_3"
        style = "@style/PlayerCard"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/dealer_card_3"
        />

    <TextView
        android:id = "@+id/player_card_4"
        style = "@style/PlayerCard"

        android:layout_toRightOf="@id/player_card_3"
        android:layout_toEndOf="@id/player_card_3"
        android:layout_below="@id/dealer_card_4"
        />

    <TextView
        android:id = "@+id/player_card_5"
        style = "@style/PlayerCard"

        android:layout_toRightOf="@id/player_card_4"
        android:layout_toEndOf="@id/player_card_4"
        android:layout_below="@id/dealer_card_5"
        />

    <Button
        android:id="@+id/hit_button"
        style= "@style/ButtonStyle"

        android:layout_below="@id/player_card_3"
        android:text="@string/hit"
        android:background="@color/yellow"
        />

    <Button
        android:id="@+id/stop_button"
        style = "@style/ButtonStyle"

        android:layout_below="@id/player_card_3"
        android:layout_alignParentRight="true"

        android:text="@string/stop"
        android:background="@color/red"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/newgame_button"
        style="@style/ButtonStyle"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/player_card_1"
        android:layout_marginTop="60dp"

        android:text="@string/new_game"
        android:textSize="30sp"
        android:background="@color/blue"
        />


    <TextView
        android:id="@+id/label_winner"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="10dp"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:text="@string/you_win"
        android:textSize="108sp"

        tools:ignore="RelativeOverlap"
        />

    <TextView
        android:id="@+id/label_loser"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="10dp"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:text="@string/you_lose"
        android:textSize="108sp"

        tools:ignore="RelativeOverlap"
        />
</RelativeLayout>